Remove violations and add best practices